--- a/scripts.yaml
+++ b/scripts.yaml
@@ -12,8 +12,8 @@ scr001_flashlightzolderbas:
           - 76b327b9329cc08343049931bb61b716
           - 38fbf0caec931547b7491e450a4046d2
       - type: toggle
-        device_id: 3b5ccf9a9f01cd0429958a4d12623ea1
-        entity_id: switch.tz3000_g5xawfcq_ts0121_b3b93afe_on_off
+        device_id: f1f326c75f8408e04137655f8c12f1e6
+        entity_id: switch.0xcc86ecfffe3ab9b3
         domain: switch
   mode: restart
 scr002_spotify_my_top_songs_2019:
@@ -68,12 +68,12 @@ scr006_gordijnen_overdag:
     domain: cover
     entity_id: cover.rollerblind_0001
     type: set_position
-    position: 35
+    position: 60
   - device_id: 66a3fee2bfc323a1bd5ce11f04e06d0b
     domain: cover
     entity_id: cover.rollerblind_0002
     type: set_position
-    position: 35
+    position: 60
   mode: single
   icon: hass:blinds
 scr007_gordijnen_veel_licht:
@@ -311,3 +311,23 @@ scr027_kerstslinger_en_kerstboom_aan_met_rainbow_effect:
       payload: '{"effect":{"effect":"rainbow","speed":60}}'
   mode: single
   icon: mdi:string-lights
+new_script:
+  alias: SCR028 Ulanziklok Weather
+  mode: single
+  sequence:
+  - service: esphome.ulanzi_del_screen
+    data:
+      icon_name: weather_*
+  - service: esphome.ulanzi_screen
+    data:
+      icon_name: weather_{{ states('sensor.openweathermap_condition') }}
+      text: '{{ states(''sensor.openweathermap_feels_like_temperature'') }}°C'
+reset_bronwater:
+  alias: Reset bronwater
+  sequence:
+  - service: counter.reset
+    data: {}
+    target:
+      entity_id: counter.bronwater
+  mode: single
+  icon: mdi:bottle-soda-classic-outline
